# RL_Olfaction

./: .gitignore  Makefile  QLearning.m  QLearningFuncApprox.m  QLearningFuncApproxEgo.asv  QLearningFuncApproxEgo.m  README.md  ToDo.org  buildGrid.m  buildGridEgo.asv  buildGridEgo.m  chooseAction.m  createTransitionList.m  egoTransitionList.m  ego_rl_agent.m  environment.yml  epsilonGreedy.m  example_13Jun2022.m  example_22NOV2022.asv  example_22NOV2022.m  makeAllPlots.m  pyproject.toml  requirements.txt  rotateTransitionList.m  runGW.m  setParams.m  setParamsEgo.m
Deep-RL/: DL.ipynb  DL.py  DeepRL.ipynb  DeepRL.py  RandomWalk1D_torch.ipynb  RandomWalk1D_torch.py  agent.py  deep_learning.py  utils.py
FuncApprox/: FuncApprox.ipynb  FuncApprox.py  FuncApprox_allo.ipynb  FuncApprox_allo.py  FuncApprox_ego.ipynb  FuncApprox_ego.py  QLearning.ipynb  QLearning.py  QLearning_allo.ipynb  QLearning_allo.py  QLearning_ego.ipynb  QLearning_ego.py  agent.py  curlyBrace.py  environment.py  environment_allo.py  environment_ego.py  plotting.py  plotting_ego.py  utils.py
Oct_6_23/: Relu_func.m  Relu_func_dx.m  SGD_RL_Oct_4_Allo.m  SGD_RL_Oct_4_Allo_triangle.m  alloTransitionList.m  buildGrid.m  chooseAction_NN.m  convert_state.m  epsilonGreedy_NN.m  main_code.sh  mutual_info_analysis_allo.m  plot_distribution.m  results_analysis.m  setParams.m
TriangleTask/: QLearning_allo.ipynb  QLearning_allo.py  ToDo.org  agent.py  agent_tensor.py  correlation-matrices-sketch.ipynb  correlation-matrices-sketch.py  curlyBrace.py  dqn_allo.ipynb  dqn_allo.py  dqn_exp_train_lower_only.ipynb  dqn_exp_train_lower_only.py  dqn_exp_train_upper_then_lower.ipynb  dqn_exp_train_upper_then_lower.py  dqn_full.ipynb  dqn_full.py  dqn_perso-lights.ipynb  dqn_perso-lights.py  dqn_perso.ipynb  dqn_perso.py  dqn_tuto.ipynb  dqn_tuto.py  env_tensor_exp_train_upper_only_then_lower.py  environment.py  environment_lights_tensor.py  environment_tensor.py  plotting.py  roadmap.ipynb  roadmap.py  run_experiment.py  slurm_job.sh  test_agent_tensor.py  test_environment_tensor.py  utils.py
(+160 files in other folders)
