[project]
name = "RL_Olfaction"
version = "0.0.1"

[tool.setuptools]
packages = ["TriangleTask"]

[project.scripts]
runexp = "TriangleTask.oscar.run_experiment:cli"

[tool.jupytext]
cell_metadata_filter = "-all"

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = ["D105", "D107", "D203", "D212"]

[tool.ruff.lint.per-file-ignores]
"./tests/*" = ["D100", "D103"]
