[project]
name = "RL_Olfaction"
version = "0.0.1"

dependencies = [
    "torch", # -i https://download.pytorch.org/whl/cu118",
    "numpy",
    "matplotlib",
    "jupyterlab",
    "pandas",
    "jupytext",
    "ipympl",
    "jupyterlab-git",
    "ipdb",
    "black[jupyter]",
    "ruff",
    "seaborn",
    "tqdm",
    "scikit-learn",
    "imojify",
    "notebook",
    "ipykernel",
    "click",
    "tensordict",
    # "hypothesis",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cartesian_polar"]

[tool.hatch.envs.default.env-vars]
PIP_EXTRA_INDEX_URL = "https://download.pytorch.org/whl/cu118"

# [tool.setuptools]
# # packages = ["TriangleTask"]
# packages = ["cartesian_polar"]

[project.scripts]
# runexp = "TriangleTask.oscar.run_experiment:cli"
runexp = "cartesian_polar.run_experiment:cli"

[tool.jupytext]
cell_metadata_filter = "-all"

[tool.ruff]
include = ["./cartesian_polar/*.py"]
# extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle
    "D",
]
ignore = ["D105", "D107", "D203", "D212", "D104"]

[tool.ruff.lint.per-file-ignores]
"./tests/*" = ["D100", "D103"]
